--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,54 @@
+# vim: set ts=2 sw=2 tw=2:
 language: python
-python:
-  - "2.7"
-  - "3.5"
-
 cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.pip-cache/
     - $HOME/virtualenv/python2.7/lib/python2.7/site-packages
 
-env:
-  matrix:
-  - TEST_SUITE=unittest CMAKE_BUILD_TYPE=Release PRJ_COMPILER=clang
-  - TEST_SUITE=unittest CMAKE_BUILD_TYPE=Debug PRJ_COMPILER=clang
-  - TEST_SUITE=unittest CMAKE_BUILD_TYPE=Release PRJ_COMPILER=gcc
-  - TEST_SUITE=unittest CMAKE_BUILD_TYPE=Debug PRJ_COMPILER=gcc
-  - TEST_SUITE=benchmark
+sudo: required
+matrix:
+  include:
+    - os: linux
+      python: 3.5
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Release PRJ_COMPILER=clang
+    - os: linux
+      python: 3.5
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Debug PRJ_COMPILER=clang
+    - os: linux
+      python: 3.5
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Release PRJ_COMPILER=gcc
+    - os: linux
+      python: 3.5
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Debug PRJ_COMPILER=gcc
+    - os: linux
+      python: 3.5
+      services: docker
+      env: TEST_SUITE=benchmark
+    - os: linux
+      python: 2.7
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Release PRJ_COMPILER=clang
+    - os: linux
+      python: 2.7
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Debug PRJ_COMPILER=clang
+    - os: linux
+      python: 2.7
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Release PRJ_COMPILER=gcc
+    - os: linux
+      python: 2.7
+      services: docker
+      env: TEST_SUITE=unittest CMAKE_BUILD_TYPE=Debug PRJ_COMPILER=gcc
+    - os: linux
+      python: 2.7
+      services: docker
+      env: TEST_SUITE=benchmark
 
 addons:
   apt:
@@ -25,7 +58,6 @@ addons:
       - valgrind
       - cppcheck
       - memcached
-      - libmemcached6
       - golang
 
 install:
